--- a/ecommerce/templates/cart/cart.html
+++ b/ecommerce/templates/cart/cart.html
@@ -37,7 +37,12 @@
     </tr>
 </tbody>
 </table>
-
-
+<div class="container">
+{% if current_user.is_authenticated %}
+<a class="btn btn-success" href="/getorder">ORDER</a>
+{% else %}
+<a class="btn btn-danger" href="/login">Login to order</a>
+{% endif %}
+</div>
 </div>
 {% endblock content %}
