--- a/ecommerce/templates/cart/orders.html
+++ b/ecommerce/templates/cart/orders.html
@@ -1,9 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="container">
+<h1>Pseudo Admin Page</h1><h3>Implementation of real admin logic is made trough boolean. </h3>
+<h4>For more information - read README.md</h4>
+<h2>ORDERS:</h2>
+{% for order_info in order_list %}
+<p>{{loop.index}}</p>
 
-{% for order in orders %}
-<p>{{order.customer.username}}</p>
+{% for key,product in order_info.orders.items() %}
+
+<p> Title: {{product.title}} </p>
+<p>Price: {{ product.price }}</p>
+<p> product... </p>
 
 {% endfor %}
-
+<hr>
+{% endfor %}
+</div>
 {% endblock content %}
