--- a/ecommerce/templates/layout.html
+++ b/ecommerce/templates/layout.html
@@ -29,7 +29,15 @@
         <a class="nav-link" href="{{url_for('create_product')}}">New Product </a>
 
         <a class="nav-link" href="{{url_for('getcart')}}">Cart ({{session['Shoppingcart']|length }})</a>
+
+        <a class="nav-link" href="{{url_for('order_list')}}">Pesudo Admin Page</a>
+        {% if current_user.is_authenticated %}
         <a class="nav-link" >{{current_user.username}} </a>
+        <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+        {% else %}
+        <a class="nav-link" href="{{url_for('login')}}">Login</a>
+        <a class="nav-link" href="{{url_for('register')}}">Sign Up</a>
+        {% endif %}
 
     </div>
   </div>
